--- a/angular.json
+++ b/angular.json
@@ -11,7 +11,7 @@
           "style": "scss"
         },
         "@schematics/angular:application": {
-          "strict": true
+          "strict": false
         }
       },
       "root": "",
